--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -47,9 +47,9 @@
         <ion-icon name="arrow-dropup"></ion-icon>
       </ion-fab-button>
       <ion-fab-list side="top">
-        <ion-fab-button color="secondary" (click)="openWebpage('www.facebook.com')"><ion-icon name="logo-facebook"></ion-icon></ion-fab-button>
-        <ion-fab-button color="secondary" (click)="openWebpage('www.instagram.com')"><ion-icon name="logo-instagram"></ion-icon></ion-fab-button>
-        <ion-fab-button color="secondary" (click)="openWebpage('www.twitter.com')"><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
+        <ion-fab-button color="secondary" (click)="openWebpage('http://www.facebook.com')"><ion-icon name="logo-facebook"></ion-icon></ion-fab-button>
+        <ion-fab-button color="secondary" (click)="openWebpage('http://www.instagram.com')"><ion-icon name="logo-instagram"></ion-icon></ion-fab-button>
+        <ion-fab-button color="secondary" (click)="openWebpage('https://www.twitter.com')"><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
       </ion-fab-list>
 
     </ion-fab>
